--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ opentelemetry-otlp = "0.31.0"
 opentelemetry-semantic-conventions = "0.31.0"
 opentelemetry-stdout = "0.31.0"
 opentelemetry_sdk = "0.31.0"
+rayon = "1.11.0"
 reqwest = { version = "0.12.24", features = ["json"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
