--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "aoc-2025"
 version = "0.1.0"
 edition = "2024"
 
+[profile.release]
+panic = "abort"
+
+
 [dependencies]
 axum = { version = "0.8.7", features = ["macros"] }
 chrono = { version = "0.4.42", features = ["serde"] }
